fix button row wrapping whitespace issues
fixes #83

--- a/extra-styles.css
+++ b/extra-styles.css
@@ -42,3 +42,7 @@
     color: #333333;
     text-decoration: none;
 }
+
+.linkWrapSection .btn {
+    margin-bottom: 5px;
+}
